src/test/ui/associated-types/issue-43924.stderr
error[E0277]: the trait bound `(dyn std::string::ToString + 'static): std::default::Default` is not satisfied
  --> $DIR/issue-43924.rs:7:5
   |
LL |     type Out: Default + ToString + ?Sized = dyn ToString;
   |     ^^^^^^^^^^-------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |     |         |
   |     |         required by this bound in `Foo::Out`
   |     the trait `std::default::Default` is not implemented for `(dyn std::string::ToString + 'static)`

error[E0599]: no function or associated item named `default` found for trait object `(dyn std::string::ToString + 'static)` in the current scope
  --> $DIR/issue-43924.rs:14:39
   |
LL |     assert_eq!(<() as Foo<u32>>::Out::default().to_string(), "false");
   |                                       ^^^^^^^ function or associated item not found in `(dyn std::string::ToString + 'static)`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0277, E0599.
For more information about an error, try `rustc --explain E0277`.
